k8s/registry/nodeport-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: registry-external
  namespace: registry
  annotations:
    metallb.universe.tf/allow-shared-ip: registry-group
spec:
  type: LoadBalancer
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
  selector:
    app.kubernetes.io/name: registry
